Adjust build and deploy methods for generic k8s deploymenst

--- a/apps/admin/kubernetes/Makefile
+++ b/apps/admin/kubernetes/Makefile
@@ -34,9 +34,19 @@ main:
 build: env main
 	gcloud container builds submit "$(BASEDIR)/../containers/." --tag=$(DOCKERREPO)/admin
 
+build.generic: main
+	docker build "$(BASEDIR)/../containers/." --tag=$(DOCKERREPO)/whackapod-admin
+	docker push $(DOCKERREPO)/whackapod-admin
+
 deploy: env creds deployment service
 
 deploy.minikube: deployment service
+deploy.generic: 
+	kubectl run admin-deployment --image=$(DOCKERREPO)/whackapod-admin --replicas=1 --port=8080 --labels=app=admin --env="APIIMAGE=$(DOCKERREPO)/whackapod-api"
+	kubectl expose deployment admin-deployment --name=admin --target-port=8080  --type=NodePort --labels="app=admin"
+	kubectl create serviceaccount wap-admin	
+	kubectl create clusterrolebinding wap-admin --clusterrole=cluster-admin --serviceaccount=$$(kubectl config view -o jsonpath="{.contexts[?(@.name==\"$$(kubectl config current-context)\")].context.namespace}"):wap-admin
+	kubectl set serviceaccount deployment admin-deployment wap-admin
 	
 test: 
 	cd 	"$(BASEDIR)/../containers" && go test
@@ -56,6 +66,10 @@ clean.deployment:
 	
 clean.service: 
 	-kubectl delete service admin
+
+clean.generic: clean.deployment clean.service
+	-kubectl delete serviceaccount wap-admin
+	-kubectl delete clusterrolebinding wap-admin 
 
 retry: clean build deploy
 
