--- a/apps/game/kubernetes/Makefile
+++ b/apps/game/kubernetes/Makefile
@@ -30,9 +30,17 @@ reset.safe: env creds
 build: env
 	gcloud container builds submit "$(BASEDIR)/../containers/." --tag=$(DOCKERREPO)/game
 
+build.generic: 
+	docker build "$(BASEDIR)/../containers/." --tag=$(DOCKERREPO)/whackapod-game
+	docker push $(DOCKERREPO)/whackapod-game
+
 deploy: env creds deployment service
 
 deploy.minikube: deployment service
+
+deploy.generic: 
+	kubectl run game-deployment --image=$(DOCKERREPO)/whackapod-game --replicas=4 --port=8080 --labels=app=game 
+	kubectl expose deployment game-deployment --name=game --target-port=8080  --type=NodePort --labels="app=api"
 
 deployment:
 	kubectl run game-deployment --image=$(DOCKERREPO)/game --replicas=4 --port=8080 --labels=app=game 
@@ -41,6 +49,8 @@ service:
 	kubectl expose deployment game-deployment --name=game --target-port=8080  --type=NodePort --labels="app=api"
 
 clean: env creds clean.deployment clean.service 
+
+clean.generic: clean.deployment clean.service 
 
 clean.minikube: clean.deployment clean.service 
 
