--- a/apps/game/containers/Dockerfile
+++ b/apps/game/containers/Dockerfile
@@ -15,3 +15,4 @@ FROM nginx
 COPY default.conf /etc/nginx/conf.d
 COPY default /usr/share/nginx/html
 RUN chmod -R 755 /usr/share/nginx/html
+EXPOSE 8080
